--- a/scss/pages/_mobile.scss
+++ b/scss/pages/_mobile.scss
@@ -20,7 +20,8 @@
     h3 {
         font-size: $defaultH3Mob;
         text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 600;
+        color: $mainColor;
     }
     
     // NAV
