--- a/scss/pages/_tablet.scss
+++ b/scss/pages/_tablet.scss
@@ -134,6 +134,30 @@
         }
     }
 
+    header {
+        aside {
+            h2 {
+                font-size: 30px;
+            }
+            strong {
+                font-size: 20px;
+            }
+            p {
+                display: block;
+                width: 50%;
+                line-height: 1.5;
+            }
+
+            a {
+                width: 10%;
+                text-align: center;
+                font-size: 12px;
+            }
+        }
+
+       
+    }
+
 
 
     // footer
