--- a/scss/pages/_tablet.scss
+++ b/scss/pages/_tablet.scss
@@ -140,8 +140,13 @@
                 font-size: 30px;
             }
             strong {
-                font-size: 20px;
+                font-size: 18px;
+
+                span {
+                    font-size: 22px;
+                }
             }
+            
             p {
                 display: block;
                 width: 50%;
