--- a/scss/pages/event/_mobile.scss
+++ b/scss/pages/event/_mobile.scss
@@ -159,8 +159,74 @@ footer {
     
 }
 
-.filter {
-    display: none;
+.eCategory, .eList {
+    width: 100%;
+
+    > article {
+        width: $contentRatioMob;
+        display: flex;
+        align-items: center;
+        column-gap: 2vh;
+
+        span {
+            border-top: 1px solid $mainColor;
+            border-bottom: 1px solid $mainColor;
+            height: 4px;
+        }
+
+        span {
+            flex: 1;
+        }
+
+    }
+}
+
+.eCategory {
+
+    > section {
+        @include rowGap(2vh);
+        align-items: center;
+    }
+   
+    figure {
+        width: 30vh;
+        height: 15vh;
+        position: relative;
+        border-radius: 2vh;
+        overflow: hidden;
+        display: flex;
+    }
+
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+
+    figcaption {
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: 0.4);
+        position: absolute;
+        @include alignColumn(center);
+        justify-content: center;
+        row-gap: 2vh;
+
+        > a {
+            color: $subColor2;
+            border: 1px solid $subColor2;
+            padding: 1vh;
+        }
+    }
+
+    h4 {
+        color: white;
+        font-size: 23px;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
 }
 
 .eList {
@@ -262,6 +328,7 @@ footer {
         }
     }
 }
+
 
 .eReference {
     background-color: $subColor2;
