--- a/scss/pages/place/_desktop.scss
+++ b/scss/pages/place/_desktop.scss
@@ -3,20 +3,49 @@ main {
         width: 100%;    
         
         h4 {
-            font-size: 40px;
+            font-size: 34px;
         }    
     }
 
 }
     //restaurant 
     .restaurant {
-        a {
+        aside > a {
             transition: .3s;
+            font-size: 12px;
+            padding: 1vh 1.5vh;
+        }
+
+        figcaption a{
+            width: 4vh;
+            height: 4vh;
+        }
+        i {
+            font-size: 12px;
         }
 
         a:hover {
             background-color: $subColor1;
-            border: 1px solid;
+            border: 1px solid $subColor1;
+            
+            i {
+                color: $whitegray;
+            }
+        }
+        section > article {
+            width: 24%;
+        }
+        figure {
+            height: 40vh;
+        }
+        article aside {
+            row-gap: 2vh;
+            h5 {
+                font-size: 16px;
+            }
+            address {
+                font-size: 12px;
+            }
         }
     }
     // activities
@@ -24,34 +53,36 @@ main {
         > section {
             width: $contentRatioDes;
             > article {
-                width: 100%;
-                figure {
-                    width: 100%;
-                    > figcaption{
-                        row-gap: 1vh;
-                        small {
-                            font-size: 18px;
-                        }
-                        h5 {
-                            font-size: 40px;
-                        }
-                        p {
-                            font-size: 22px;
-                            padding-bottom: 1.5vh;
-                        }
-                        a{
-                            font-size: 18px;
-                            transition: .3s;
-                        }
-                        a:hover {
-                            background-color: $whitegray;
-                            color: $mainColor;
-                        }
-                    }
-                }
-                
+                width: 100%;  
             }
         }
+        figure {
+            width: 100%;
+            height: 60vh;
+            transition: .3s;
+        } 
+        figcaption{
+            row-gap: 1vh;
+            small {
+                font-size: 14px;
+            }
+            h5 {
+                font-size: 32px;
+            }
+            p {
+                font-size: 18px;
+                padding-bottom: 1.5vh;
+            }
+            a{
+                font-size: 16px;
+                transition: .3s;
+            }
+            a:hover {
+                background-color: $whitegray;
+                color: $mainColor;
+            }
+        }   
+        
     }
     // exhibition
     .exhibition {
@@ -59,10 +90,28 @@ main {
             width: $contentRatioDes;
             > section {
                 width: 100%;
+                row-gap: 4vh;
                 figure {
                     width: 48%;
+                    height: 30vh;
+                }
+                figcaption {
+                    row-gap: 2vh;
+                }
+                h5 {
+                    font-size: 16px;
+                }
+                p {
+                    font-size: 12px;
+                }
+                span {
+                    font-size: 14px;
                 }
                 a {
+                    width: 40%;
+                    padding: 1vh 0;
+                    font-size: 14px;
+                    text-align: center;
                     transition: .3s;
                 }
                 a:hover {
@@ -76,9 +125,19 @@ main {
     .theatre {
         >article {
             width: $contentRatioDes;
+            row-gap: 2vh;
 
             h5 {
                 font-size: 24px;
+            }
+            p {
+                font-size: 18px;
+            }
+            a {
+                transition: .3s;
+            }
+            a:hover {
+                color: $subColor1;
             }
         }
         > section {
@@ -113,5 +172,18 @@ main {
     .reference {
         > section {
             width: $contentRatioDes;
+        }
+
+        figcaption  {
+            a {
+                font-size: 16px;
+            }
+            a:hover {
+                color: $mainColor;
+                text-decoration: none;
+            }
+            p {
+                font-size: 16px;
+            }
         }
     }
