--- a/scss/pages/place/_mobile.scss
+++ b/scss/pages/place/_mobile.scss
@@ -81,144 +81,140 @@ main {
                 width: 100%;
                 @include alignColumn(center);
                 row-gap: 4vh;
-                article {
-                    width: 100%;
-                    padding: 2vh 0;
-                    border: 1px solid $lightgray;
-                    @include alignColumn(center);
-                    row-gap: 2vh;
-                    figure {
-                        width: 80%;
-                        height: 20vh;
-                        padding: 1vh;
-                        @include backImg;
-                        background-image: url(/img/restaurant_1.jpg);
-                        
-                        figcaption{
-                            display: flex;
-                            justify-content: flex-end;
-                            width: 100%;
-                            height: 100%;
-                            a {
-                                @include flexAll (none,center,center,0,0);
-                                text-align: center;
-                                width: 3vh;
-                                height: 3vh;
-                                border-radius: 50%;
-                                background-color: $whitegray;
-                            }
-                            i {
-                                color: $subColor1;
-                            }
+            }
+            article {
+                width: 100%;
+                padding: 2vh 0;
+                border: 1px solid $lightgray;
+                @include alignColumn(center);
+                row-gap: 2vh;
+            }
 
-                            a:active i {
-                                background-color: $subColor1;
-                            }
-                        }
-                    }
-                    
-                    aside {
-                        width: 80%;
-                    @include alignColumn(flex-start);
-                    row-gap: .5vh;
-                    text-align: center;
-                        h5 {
-                            text-align: left;
-                            color: $mainColor;
-                            font-size: 14px;
-                            font-weight: 600;
-                        }
-                        address {
-                            font-size: 10px;
-                            text-align: left;
-                        }
-                        ul {
-                            width: 100%;
-                            display: flex;
-                            justify-content: left;
-                            align-items: center;
-                            margin: 0;
-                            padding: 0;
-                            li{
-                                list-style: none;
-                                width: 1.5vh;
-                                height: 1.5vh;
-                                border-radius: 50%;
-                                background-color: $mainColor;
-                                border:1px solid $mainColor;
-                            }
-
-                            li:nth-child(5) {
-                                border:1px solid $mediumGray;
-                                background-color: transparent;
-                            }
-
-                        
-                            li:last-child {
-                                border: none;
-                                background-color: transparent;
-                                padding-left: 2px;
-                                font-size: 10px;
-                                color: $mediumGray;
-                            }
-                        }
-
-                        a{
-                            align-items: flex-start;
-                            justify-content: left;
-                            border: 1px solid $mainColor;
-                            background-color: $mainColor;
-                            color: $whitegray;
-                            font-size: 10px;
-                            border-radius: 4vh;
-                            padding: .5vh 1vh;
-                        }
-
-                        a:active {
-                            background-color: $subColor1;
-                            border: 1px solid $subColor1;
-
-                        }
-                    }
-
+            article:nth-child(2) {
+                figure {
+                    background-image: url(/img/restaurant_2.jpg);
                 }
-
-                article:nth-child(2) {
-                    figure {
-                        background-image: url(/img/restaurant_2.jpg);
-                    }
-                    aside {
-                        li:nth-child(4) {
-                            background-color: transparent;
-                            border: 1px solid $mediumGray;
-                        }
+                aside {
+                    li:nth-child(4) {
+                        background-color: transparent;
+                        border: 1px solid $mediumGray;
                     }
                 }
-                article:nth-child(3) {
-                    figure {
-                        background-image: url(/img/restaurant_3.jpg);
-                    }
-                    aside {
-                        li:nth-child(4) {
-                            background-color: transparent;
-                            background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
-                            border: 1px solid $mediumGray;
-                        }
+            }
+            article:nth-child(3) {
+                figure {
+                    background-image: url(/img/restaurant_3.jpg);
+                }
+                aside {
+                    li:nth-child(4) {
+                        background-color: transparent;
+                        background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
+                        border: 1px solid $mediumGray;
                     }
                 }
-                article:nth-child(4) {
-                    figure {
-                        background-image: url(/img/restaurant_4.jpg);
+            }
+            article:nth-child(4) {
+                figure {
+                    background-image: url(/img/restaurant_4.jpg);
+                }
+                aside {
+                    li:nth-child(5) {
+                        background-color: transparent;
+                        background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
+                        border: 1px solid $mediumGray;
                     }
-                    aside {
-                        li:nth-child(5) {
-                            background-color: transparent;
-                            background: linear-gradient(90deg, $mainColor 50%, transparent 50%);
-                            border: 1px solid $mediumGray;
-                        }
-                    }
+                }
+            }
+            aside {
+                width: 80%;
+                @include alignColumn(flex-start);
+                row-gap: .5vh;
+                text-align: center;
+            }
+            h5 {
+                text-align: left;
+                color: $mainColor;
+                font-size: 14px;
+                font-weight: 600;
+            }
+            address {
+                font-size: 10px;
+                text-align: left;
+            }
+            ul {
+                width: 100%;
+                display: flex;
+                justify-content: left;
+                align-items: center;
+                margin: 0;
+                padding: 0;
+                li{
+                    list-style: none;
+                    width: 1.5vh;
+                    height: 1.5vh;
+                    border-radius: 50%;
+                    background-color: $mainColor;
+                    border:1px solid $mainColor;
                 }
 
+                li:nth-child(5) {
+                    border:1px solid $mediumGray;
+                    background-color: transparent;
+                }
+
+            
+                li:last-child {
+                    border: none;
+                    background-color: transparent;
+                    padding-left: 2px;
+                    font-size: 10px;
+                    color: $mediumGray;
+                }
+            }
+
+            a{
+                align-items: flex-start;
+                justify-content: left;
+                border: 1px solid $whitegray;
+                background-color: $mainColor;
+                color: $whitegray;
+                font-size: 10px;
+                border-radius: 4vh;
+                padding: .5vh 1vh;
+            }
+
+            a:active {
+                background-color: $subColor1;
+                border: 1px solid $subColor1;
+
+            }
+        }
+        figure {
+            width: 80%;
+            height: 20vh;
+            padding: 1vh;
+            @include backImg;
+            background-image: url(/img/restaurant_1.jpg);
+        }
+        figcaption{
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+            height: 100%;
+            a {
+                @include flexAll (none,center,center,0,0);
+                text-align: center;
+                width: 3vh;
+                height: 3vh;
+                border-radius: 50%;
+                background-color: $whitegray;
+            }
+            i {
+                color: $subColor1;
+            }
+
+            a:active i {
+                background-color: $subColor1;
             }
         }
     }
@@ -233,52 +229,55 @@ main {
                 width: 100%;
                 @include alignColumn(center);
                 row-gap: 2vh;
-                figure {
-                    width: 100%;
-                    height: 30vh;
-                    @include backImg;
-                    background-image: url(/img/activities_1.jpeg);
-                    figcaption {
-                        width: 100%;
-                        height: 100%;
-                        padding: 0 0 2vh 2vh;
-                        @include alignColumn(flex-start);
-                        justify-content: flex-end;
-                        row-gap: 1.5vh;
-                        background-color: rgba($color: #444, $alpha: 0.4);
-                        color: $whitegray;
-                        box-shadow: 3px 3px 4px $mediumGray;
-                        h5 {
-                            font-family: $defaultFont;
-                            font-weight: 700;
-                            font-size: 28px;
-                            letter-spacing: .5px;
-                            padding-bottom: 1vh;
-                            border-bottom: 1px solid;
-                        }
-                        p {
-                            font-weight: 600;
-                        }
-                        a {
-                            color: $whitegray;
-                            text-transform: uppercase;
-                            font-size: 10px;
-                            font-weight: 600;
-                            background-color: $mainColor;
-                            padding: 1vh;
-                        }
-                    }
-                }
-                figure:nth-child(2){
-                    background-image: url(/img/activities_2.jpg);
-                }
-                figure:nth-child(3){
-                    background-image: url(/img/activities_3.jpg);
-                }
-                figure:nth-child(4){
-                    background-image: url(/img/activities_4.jpeg);
-                }
             }
+        }
+        figure {
+            width: 100%;
+            height: 30vh;
+            @include backImg;
+            background-image: url(/img/activities_1.jpeg);
+        }
+        figcaption {
+            width: 100%;
+            height: 100%;
+            padding: 0 0 2vh 2vh;
+            @include alignColumn(flex-start);
+            justify-content: flex-end;
+            row-gap: 1.5vh;
+            background-color: rgba($color: #444, $alpha: 0.4);
+            color: $whitegray;
+            box-shadow: 3px 3px 4px $mediumGray;
+            h5 {
+                font-family: $defaultFont;
+                font-weight: 700;
+                font-size: 28px;
+                letter-spacing: .5px;
+                padding-bottom: 1vh;
+                border-bottom: 1px solid;
+            }
+            i {
+                color: $whitegray;
+            }
+            p {
+                font-weight: 600;
+            }
+            a {
+                color: $whitegray;
+                text-transform: uppercase;
+                font-size: 10px;
+                font-weight: 600;
+                background-color: $mainColor;
+                padding: 1vh;
+            }
+        }
+        figure:nth-child(2){
+            background-image: url(/img/activities_2.jpg);
+        }
+        figure:nth-child(3){
+            background-image: url(/img/activities_3.jpg);
+        }
+        figure:nth-child(4){
+            background-image: url(/img/activities_4.jpeg);
         }
     }
     // exhibition
@@ -290,50 +289,50 @@ main {
                 width: 100%;
                 @include alignColumn (center);
                 row-gap: 1vh;
-                figure {border: 1px solid$mainColor;
+            }
+            figure {border: 1px solid$mainColor;
+                width: 100%;
+                height: 20vh;
+                padding: 2vh;
+                background-color: $whitegray;
+                @include columnGap(4%);
+            }
+            img {
+                width: 45%;
+            }
+            figcaption {
+                @include alignColumn (flex-start);
+                justify-content:center;
+                row-gap: 1.5vh; 
+                width: 51%;
+                h5 {
+                    font-size: 12px;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    color: $mainColor;
+                }
+                p {
+                    font-size: 8px;
+                    color: $mediumGray;
+                }
+                span {
+                    font-size: 12px;
+                    color: $subColor1;
+                }
+                aside {
                     width: 100%;
-                    height: 20vh;
-                    padding: 2vh;
-                    background-color: $whitegray;
-                    @include columnGap(4%);
-                    img {
-                        width: 45%;
-                    }
-                    figcaption {
-                        @include alignColumn (flex-start);
-                        justify-content:center;
-                        row-gap: 1.5vh; 
-                        width: 51%;
-                        h5 {
-                            font-size: 12px;
-                            font-weight: 600;
-                            text-transform: uppercase;
-                            color: $mainColor;
-                        }
-                        p {
-                            font-size: 8px;
-                            color: $mediumGray;
-                        }
-                        span {
-                            font-size: 12px;
-                            color: $subColor1;
-                        }
-                        aside {
-                            width: 100%;
-                            height: 100%;
-                            display: flex;
-                            align-items: flex-end;
-                            justify-content: right;
-                            a {
-                                font-size: 10px;
-                                font-weight: 600;
-                                padding: .5vh 1vh;
-                                color: $mainColor;
-                                border: 1px solid;
-                                border-radius: 5px;
-                            }
-                        }
-                    }
+                    height: 100%;
+                    display: flex;
+                    align-items: flex-end;
+                    justify-content: right;
+                }
+                a {
+                    font-size: 10px;
+                    font-weight: 600;
+                    padding: .5vh 1vh;
+                    color: $mainColor;
+                    border: 1px solid;
+                    border-radius: 5px;
                 }
             }
         }
@@ -410,49 +409,49 @@ main {
     .reference{
         > section {
             width: $contentRatioMob ;
-            > article {
-                h2 {
-                    button {
-                    color: $subColor1;
-                    }
-
-                    button {
-                        color: $subColor1!important;
-                    }
-
-                    button:focus{
-                        background-color: rgba($color: $subColor1, $alpha: 0.2);
-                        color: $subColor1;
-                        box-shadow: 0 0 0 .4vh rgba($color: $subColor1, $alpha: 0.7);
-                    }
-        
-                }
-
-                figure {
-                    @include alignColumn(center);
-                    padding-bottom: 2vh;
-                    img {
-                        width: 90%;
-                    }
-                    figcaption {
-                        width: 90%;
-                        @include alignColumn(flex-start);
-                        row-gap: 1vh;
-                        p {
-                            margin: 0;
-                            padding: 0;
-                        }
-                        a {
-                            font-size: 12px;
-                            text-decoration: underline;
-                            color: $subColor1;
-                            margin: 0;
-                            padding: 0;
-                        }
-                    }
-                }
-
+        }
+        figure {
+            @include alignColumn(center);
+            row-gap: 2vh;
+            padding-bottom: 2vh;
+            img {
+                width: 90%;
             }
         }
+        figcaption {
+            width: 90%;
+            @include alignColumn(flex-start);
+            row-gap: 2vh;
+            p {
+                margin: 0;
+                padding: 0;
+            }
+            a {
+                font-size: 12px;
+                text-decoration: underline;
+                color: $subColor1;
+                margin: 0;
+                padding: 0;
+            }
+        }
+        h2 {
+            button {
+            color: $subColor1;
+            }
+
+            button {
+                color: $subColor1!important;
+            }
+
+            button:focus{
+                background-color: rgba($color: $subColor1, $alpha: 0.2);
+                color: $subColor1;
+                box-shadow: 0 0 0 .4vh rgba($color: $subColor1, $alpha: 0.7);
+            }
+        }
+    }
+
+    .accordion {
+        --bs-accordion-active-bg: #e1e1e1; 
     }
 
