--- a/scss/pages/event/_tablet.scss
+++ b/scss/pages/event/_tablet.scss
@@ -84,7 +84,6 @@ main {
     }
 }
 
-
 .eCategory {
     align-items: center;
 
@@ -119,9 +118,7 @@ main {
             font-size: 14px;
         }
     }
-
 }
-
 
 .eList {
 
@@ -135,12 +132,40 @@ main {
     figure {
         width: 47%;
     }
+
+    img {
+        height: 16vh;
+    }
     
     details {
 
         iframe {
             height: 16vh;
         }
+    }
+}
+
+.eArticle {
+
+    > section {
+
+        >  article {
+            height: 27vh;
+        }
+
+        p {
+            display: block;
+            color: lightgray;
+        }
+    }
+
+    aside {
+        background-image: linear-gradient( 90deg, rgba($color: #000000, $alpha: 0.8) 50%, rgba($color: #000000, $alpha: 0.2) 100%);
+    }
+
+    a:hover {
+        background-color: $subColor2;
+        color: $darkGray;
     }
 }
 
