--- a/scss/pages/event/_mobile.scss
+++ b/scss/pages/event/_mobile.scss
@@ -44,6 +44,7 @@ main {
             @include alignColumn (center);
             row-gap: 1vh;
             text-align: center;
+            width: fit-content
         }
     }
   @include alignColumn (center);
@@ -61,13 +62,14 @@ main {
     }
 
     p {
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
         column-gap: 2vh;
 
         span {
-            width: 10vh;
+            width: 50%;
             height: 2px;
             background-color: $mainColor;
         }
@@ -191,9 +193,7 @@ main {
     .pic6 figure {
         background-image: url(/img/eGallery6.jpeg);
     }
-    
 }
-
 
 .eCategory {
 
@@ -240,7 +240,6 @@ main {
         text-transform: uppercase;
         font-weight: 600;
     }
-
 }
 
 .eList {
@@ -258,6 +257,8 @@ main {
 
     img {
         width: 100%;
+        height: 22vh;
+        object-fit: cover;
     }
 
     figcaption {
@@ -341,6 +342,54 @@ main {
             color: $subColor1;
         }
     }
+}
+
+.eArticle {
+
+    > section {
+        row-gap: 2vh;
+
+        >  article {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 26vh;
+        }
+
+        p {
+            display: none;
+        }
+    }
+
+    aside {
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient( rgba($color: #000000, $alpha: 0.6) 50%, rgba($color: #000000, $alpha: 0.2) 100%);
+        @include rowGap(2vh);
+        color: white;
+        padding: 5%;
+    }
+
+    small {
+        color: gray;
+    }
+
+    a {
+        width: fit-content;
+        color: $subColor2;
+        padding: 2%;
+        border: 1px solid $subColor2;
+    }
+   
+
+    .article1 {
+        background-image: url(/img/article1.jpg);
+    }
+
+    .article2 {
+        background-image: url(/img/article2.jpg);
+    }
+
 }
 
 .eRegister {
