--- a/scss/pages/place/_desktop.scss
+++ b/scss/pages/place/_desktop.scss
@@ -1,7 +1,37 @@
+// header
+header {
+    height: 60vh;
+    h2 {
+        font-size: 34px;
+    }
+    p {
+        width: 100%;
+    }
+    form {
+        width: 30%;
+        padding-top: 4vh;
+        input{
+            padding: 2vh;
+        }
+
+        input::placeholder {
+            font-size: 16px;
+        }
+
+        [type="submit"] {
+            transition: .3s;
+        }
+        [type="submit"]:hover {
+            background-color: $subColor2;
+        }
+    }
+
+}
+// main
 main {
     > section {
         width: 100%;  
-        padding: 20vh 0;  
+        padding: 15vh 0;  
         
         h4 {
             font-size: 34px;
