main: header padding modified

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,6 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 
 $defaultFont    : 'Open Sans', sans-serif;
-$subFont        : 'Noto serif', serif;
 $mainColor      : #086814;
 $subColor1      : #f65b1d;
 $subColor2      : #f1da2b;
