--- a/scss/pages/_desktop.scss
+++ b/scss/pages/_desktop.scss
@@ -32,6 +32,11 @@
 
         > article {
             height: 40vh;
+
+            aside {
+                padding-left: 11%;
+                padding-right: 11%;
+            }
         }
 
         aside {
