--- a/scss/pages/_tablet.scss
+++ b/scss/pages/_tablet.scss
@@ -135,7 +135,17 @@
     }
 
     header {
+
+        padding-top: 3.5vh;
+
+        > article {
+            aside {
+                padding-left: 7%;
+                padding-right: 7%;
+            }
+        }
         aside {
+
             h2 {
                 font-size: 30px;
             }
@@ -149,8 +159,8 @@
             
             p {
                 display: block;
-                width: 50%;
-                line-height: 1.5;
+                line-height: 1.2;
+                color: $lightgray;
             }
 
             a {
