--- a/scss/pages/event/_tablet.scss
+++ b/scss/pages/event/_tablet.scss
@@ -9,6 +9,30 @@ main {
 
 .h_header {
 
+    h3 {
+        display: block;
+        color: $darkGray;
+        font-size: 16px;
+        background-color: $subColor2;
+        border-radius: 3vh;
+        padding: 1% 2%;
+        font-weight: 600;
+    }
+
+    > section {
+        > article {
+            width: 100%;
+            background-image: linear-gradient(rgba($color: #000000, $alpha: 0.7) 0%, transparent 20%);
+            position: absolute;
+            top: 3vh;
+            height: 7vh;
+            z-index: 1;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+        }
+    }
+
     figcaption {
 
         text-align: left;
