main: revising is done

--- a/scss/pages/_desktop.scss
+++ b/scss/pages/_desktop.scss
@@ -27,11 +27,12 @@
         }
     }
 
+    // header
     header {
-        height: 40vh;
+        height: 50vh;
 
         > article {
-            height: 40vh;
+            height: 50vh;
 
             aside {
                 padding-left: 11%;
